# baddreamer-code

./: .gitignore
sz/: test.py
xxp/VideoActionModel/: pyproject.toml
xxp/VideoActionModel/configs/data/: finetuning_poisoned.yaml
xxp/VideoActionModel/configs/experiment/: action_learning.yaml  finetune_poisoned.yaml  finetune_poisoned_test.yaml  simple_test.yaml
xxp/VideoActionModel/configs/hydra/: default.yaml
xxp/VideoActionModel/configs/paths/: default.yaml
xxp/VideoActionModel/configs/trainer/: single_gpu.yaml
xxp/VideoActionModel/mup_shapes/: actionexpert_24layers_baseattentiondim768_baseembeddingdim64.bsh  gpt2_24layers_basewidth768.bsh
xxp/VideoActionModel/output/default/: hparams.yaml
xxp/VideoActionModel/output/default/.hydra/: config.yaml  hydra.yaml  overrides.yaml
xxp/VideoActionModel/output_path/VaVAM_256_action_test/.hydra/: config.yaml  hydra.yaml  overrides.yaml
xxp/VideoActionModel/output_path/VaVAM_768_action_learning_test/.hydra/: config.yaml  hydra.yaml  overrides.yaml
xxp/VideoActionModel/output_path/VaVAM_768_action_test/.hydra/: config.yaml  hydra.yaml  overrides.yaml
xxp/VideoActionModel/poisoning/: backdoor_train.py  convert_poisoned_tokens.py  data_poisoning.py  eval.py  noise.py
xxp/VideoActionModel/vam/: train.py
xxp/VideoActionModel/vam/action_expert/: video_action_model.py
xxp/VideoActionModel/vam/datalib/: data_mixing.py  ego_trajectory_datamodule.py  finetuning_poisoned_datamodule.py  poisoned_tokens_dataset.py
xxp/VideoActionModel/vam/video_pretraining/: mup_gpt2.py  next_token_predictor.py  simple_gpt2.py  simple_next_token_predictor.py
(+434 files in other folders)
